<resources>
    <string name="app_name">Tech Refurbish Center</string>
    <string name="name">Name</string>
    <string name="hint_emp_id">Employee Id</string>
    <string name="login">Login</string>
    <string name="txt_enter_employee_id">Please enter your Employee Id</string>
    <string name="rubbing_done_msg">Rubbing done successfully</string>
    <string name="rubbing_remove_msg">Rubbing Removed successfully</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="err_msg_blank_mobile_num">Enter mobile no.</string>
    <string name="err_msg_valid_mobile_no">Enter valid mobile number</string>
    <string name="err_msg_invalid_mobile_no">Invalid mobile number</string>
    <string name="proceed_to_login">Proceed</string>
    <string name="fcd_text_otp_on_call">OTP on Call</string>
    <string name="errror_no_internet">Slow or no internet connection.Check your internet settings.</string>
    <string name="choose_your_response">Choose your response</string>
    <string name="refresh">Refresh</string>
    <string name="rubbing_complete_alert">Are you sure you want to complete the rubbing for:</string>
    <string name="rubbing_remove_alert">Are you sure you want to remove the rubbing task for:</string>
    <string name="base_api_url">api.test.cashify.in</string>
    <string name="base_auth_url">http://cas.api.test.cashify.in</string>
    <string name="end_auth_url">/v1/oauth/token?grant_type=implicit&amp;client_id=trc-app&amp;client_version=v1</string>
    <string name="auth_api_url">api.test.cashify.in</string>
    <string name="na">NA</string>
    <string name="try_again">Try Again</string>
    <string name="ok">OK</string>
    <string name="edit">
        <u>Edit</u>
    </string>
    <string name="delete">
        <u>Delete</u>
    </string>
    <string name="text_continue">Continue</string>
    <string name="text_or">OR</string>
    <string name="text_add_new">+ Add New</string>
    <string name="please_wait_this_may_take_a_moment">Please wait! This may take a moment.</string>
    <string name="text_price">\u20B9 %1$s</string>
    <string name="SESSION_HAS_EXPIRED">session has expired</string>
    <string name="send_to_in_progress">Send to in progress</string>
    <string name="scanning_is_disabled">Scanning is Disabled</string>
    <string name="change_password">Change Password</string>
    <string name="password_help">Password should be of minimum 6 characters and consist of 1 uppercase and 1 digit</string>
    <string name="repair_done">Repair Done</string>
    <string name="mark_ok">Mark Ok</string>
    <string name="start_work">Start Work</string>
    <string name="put_on_hold">Put on Hold</string>
    <string name="send_to_l4">Send to L4</string>
    <string name="order_part">Order Part</string>
    <string name="view_parts">View Parts</string>
    <string name="mark_nff">Mark NFF</string>
    <string name="mark_nr">Mark NR</string>
    <string name="mark_pna">Mark PNA</string>
    <string name="title_activity_virtual_store">VirtualStore</string>
    <string name="re_qc_fail_reason">Re-QC Fail Reason</string>
    <string name="select_color">Select Color</string>
    <string name="select_model">Select Model</string>
    <string name="select_brand">Select Brand</string>
    <string name="search_color">Search color</string>
    <string name="search_model_name">Search model name</string>
    <string name="search_brand_name">Search brand name</string>
    <string name="device_color">Device Color:</string>
    <string name="device_name">Device Name:</string>
    <string name="device_barcode">Device Barcode:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="rubbing_done">Rubbing Done</string>
    <string name="rubbing_not_done">Rubbing Not Done</string>
    <string name="rubbing_cancel">Rubbing Cancel</string>
    <string name="enter_barcode">Enter Barcode</string>
    <string name="click_on_confirm_to_cancel">Click on Confirm to Cancel.</string>
    <string name="scan">Scan</string>
    <string name="enter_part_barcode">Enter part barcode</string>
    <string name="enter_device_barcode">Enter device barcode</string>
    <string name="submit">Submit</string>
    <string-array name="planets">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Pluto</item>

        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Pluto</item>


        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Pluto</item>


        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
        <item>Pluto</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="click_on_confirm_to_recieve">Click on confirm to receive \nthe part</string>
    <string name="done">Done</string>
    <string name="plz_upload_all_images">Please upload all Images</string>
    <string name="error_uploading_image">Error Uploading Image</string>
    <string name="efficiency">Efficiency</string>
    <string name="avg_repair_time">Avg repair time</string>
    <string name="leading_engineers">Leading Engineers</string>
    <string name="total_assign_device">Total Assigned devices</string>
    <string name="marked_ok">Marked Ok</string>
    <string name="mark_ok_pass">Marked Ok Pass</string>
    <string name="mark_ok_fail">Marked Ok Fail</string>
    <string name="effeciency">Efficiency</string>
    <string name="volume">Volume</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="avg_part_cost">Avg Part Cost</string>
    <string name="avg_part_consumption">Avg Part consumption</string>
    <string name="parts_assigned">Parts Assigned</string>
    <string name="parts_consume">Parts consumed</string>
    <string name="parts_return">Parts returned</string>
    <string name="parts_requested">Part requested</string>
    <string name="engineers_name">Engineer\'s Name</string>
    <string name="location">Location</string>
    <string name="part_status">Part Status</string>
    <string name="folder">Folder</string>
    <string name="sync">Sync</string>
    <string name="part_name">Part Name</string>
    <string name="part_sku">Part Sku</string>
    <string name="part_color">Part Color</string>
    <string name="available_quantity">Available Quantity</string>
    <string name="requested_quantity">Requested Quantity</string>
    <string name="suggested_barcode">Suggested Barcode</string>
    <string name="assign">Assign</string>
    <string name="part_barcode">Part Barcode</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="get_quantity">Get Quantity</string>
    <string name="r_u_sure_u_want_to_cancel">Are you sure you want to cancel the part request?</string>
    <string name="msg_rec_part">Suggested Barcode</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="r_u_sure_u_want_to_unlink">Are you sure you want to unlink the part %1$s</string>
    <string name="dead_part">Dead Part</string>
    <string name="alternate_part">Alternate Part</string>
    <string name="go_back">Go Back</string>
    <string name="original_part_request">Original Part Request</string>
    <string name="alternate_part_available">Alternate Parts Available</string>
    <string name="request">Request</string>
    <string name="r_u_sure_u_want_to_link">Are you sure you want to link dead part?</string>
    <string name="r_u_sure_u_want_to_request">Are you sure you want to request part %1$s</string>
    <string name="part_barcode_assigned">Part barcode %1$s assigned</string>
    <string name="part_barcode_not_assigned">Part barcode %1$s not assigned</string>
    <string name="alternate_part_sku">Alternate Part Sku</string>
    <string name="alternate_part_status">Alternate Part Status</string>
    <string name="alternate_part_color">Alternate Part Color</string>
    <string name="prid_empty">Part Id  is empty</string>
    <string name="part_barcode_assign">Part Barcode %1$s Assigned</string>
    <string name="or">OR</string>
    <string name="no_data">No Data Found</string>
    <string name="hint_enter_location">Enter Location</string>
    <string name="home">Home</string>
    <string name="qc_pending">QC Pending</string>
    <string name="spare_ok">Spare Ok</string>
    <string name="faulty_spare">Faulty Spare</string>
    <string name="click_on_confirm_ok">Click on \'Confirm\' to mark spare %1$s as OK</string>
    <string name="click_on_confirm_faulty">Click on \'Confirm\' to mark spare %1$s as a faulty</string>
    <string name="barcode_successfully_submitted">Barcode  successfully updated </string>
    <string name="scan_part_barcode">Scan Part Barcode</string>
    <string name="assign_rider">Assign Rider</string>
    <string name="part_assigned">Part Assigned</string>
    <string name="search_bby_riders_name">Search by Rider\'s Name</string>
    <string name="rider_assign_successfully">Rider %1$s assigned successfully</string>
    <string name="plz_assign_rider">Please assign the rider</string>
    <string name="no_parts_available">No Parts Available</string>
    <string name="plz_enter_location">Please Enter Location</string>
    <string name="plz_enter_pass">Please enter password</string>
    <string name="pending_delivery">Pending Delivery</string>
    <string name="pending_pickup">Pending Pickup</string>
    <string name="receive">Receive</string>
    <string name="deliver">Deliver</string>
    <string name="click_on_confirm_to_receive">Click on Confirm to receive</string>
    <string name="part_successfully_received">Part  %1$s successfully received</string>
    <string name="back">Back</string>
    <string name="barcode_successfully_received">Barcode  %1$s successfully received</string>
    <string name="no_parts_present">No Parts Requests are Available</string>
    <string name="send_part_back">Send part back to Inventory</string>
    <string name="click_on_confirm_to_send">Click on confirm to send part  %1$s back to inventory</string>
    <string name="click_on_confirm_mark_ok">Click on confirm to Mark-Ok</string>
    <string name="barcode">Barcode</string>
    <string name="color">Color</string>
    <string name="imei">IMEI</string>
    <string name="part_sucessfuly_received">Part successfully received</string>
    <string name="action">Action</string>
    <string name="status">Status</string>
    <string name="sku">SKU-</string>
    <string name="are_u_sure">\"Are you sure you want to receive\"</string>
    <string name="send_to_tl">Send to TL</string>
    <string name="click_on_confirm_tl">Click on confirm to Send to TL</string>
    <string name="mandatory_star">*</string>
    <string name="select_reasons_from_above_list">Select Reasons from above list</string>
    <string name="select_return_reason">Please select Reason</string>
    <string name="select_reasons">Select Reason</string>
    <string name="error">Error</string>
    <string name="device_successfully_updated">Device successfully updated</string>
    <string name="assigned_at">Assigned At</string>
    <string name="repair_type">Repair Type</string>
    <string name="grade">Grade</string>
    <string name="add_part_for_pna">Add Parts for PNA</string>
</resources>