<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="#fff"
        android:clickable="false"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_marginTop="@dimen/space_30dp"
            android:layout_marginEnd="@dimen/space_30dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/Medium.JetBlack.TextSize14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/device_barcode" />

            <TextView
                android:id="@+id/barcode"
                style="@style/Medium.JetBlack.TextSize14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="NA" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_marginEnd="@dimen/space_30dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/Medium.JetBlack.TextSize14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/device_name" />

            <TextView
                android:id="@+id/device_name"
                style="@style/Medium.JetBlack.TextSize14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="NA" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_marginEnd="@dimen/space_30dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/Medium.JetBlack.TextSize14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/device_color" />

            <TextView
                android:id="@+id/device_color"
                style="@style/Medium.JetBlack.TextSize14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="NA" />
        </LinearLayout>


        <TextView
            style="@style/SemiBold.JetBlack.TextSize14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_marginTop="@dimen/space_40dp"
            android:layout_marginEnd="@dimen/space_30dp"
            android:text="@string/select_brand" />

        <in.cashify.androidtrc.module.elss.ui.SearchableSpinner
            android:id="@+id/brand"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50dp"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_marginTop="@dimen/space_10dp"
            android:layout_marginEnd="@dimen/space_30dp"
            android:background="@drawable/csh_rounded_spinner"
            android:entries="@array/planets"
            app:hintText="@string/search_brand_name" />

        <TextView
            style="@style/SemiBold.JetBlack.TextSize14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_marginTop="@dimen/space_10dp"
            android:layout_marginEnd="@dimen/space_30dp"
            android:text="@string/select_model" />

        <in.cashify.androidtrc.module.elss.ui.SearchableSpinner
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50dp"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_marginTop="@dimen/space_10dp"
            android:layout_marginEnd="@dimen/space_30dp"
            android:background="@drawable/csh_rounded_spinner"
            android:entries="@array/planets"
            app:hintText="@string/search_model_name" />

        <TextView
            style="@style/SemiBold.JetBlack.TextSize14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_marginTop="@dimen/space_10dp"
            android:layout_marginEnd="@dimen/space_30dp"
            android:text="@string/select_color" />

        <in.cashify.androidtrc.module.elss.ui.SearchableSpinner
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_50dp"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_marginTop="@dimen/space_10dp"
            android:layout_marginEnd="@dimen/space_30dp"
            android:background="@drawable/csh_rounded_spinner"
            android:entries="@array/planets"
            app:hintText="@string/search_color" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_15dp"
            android:layout_marginTop="@dimen/space_50dp"
            android:layout_marginRight="@dimen/space_15dp"
            android:weightSum="1">

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_5dp"
                android:layout_weight=".5"
                android:background="@color/alert_red"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5dp"
                android:layout_weight=".5"
                android:background="@color/confirm"
                android:text="@string/confirm"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</layout>