<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/space_10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        style="@style/Medium.JetBlack.TextSize16"

        android:text="@string/r_u_sure_u_want_to_cancel"/>



    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TealButton.TextSize10"
        android:text="@string/yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        android:layout_marginTop="@dimen/space_20dp"
        android:id="@+id/btn_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_right"
        />





    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginEnd="@dimen/space_10dp"
        android:text="@string/no"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/btn_right"

        app:layout_constraintStart_toEndOf="@+id/btn_left"
        app:layout_constraintTop_toBottomOf="@+id/tv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/space_20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>