<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginModel"
            type="in.cashify.androidtrc.module.login.data.LoginViewModelV2" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_20dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_22sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_enter_employee_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16dp"
            android:layout_marginTop="@dimen/space_5dp"
            android:layout_marginEnd="@dimen/space_16dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/txt_enter_employee_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_login" />

        <EditText
            android:id="@+id/et_employee_id"
            style="@style/EditTextRoundCornerWhite"
            android:layout_marginTop="@dimen/space_18dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_emp_id"
            android:imeOptions="actionNext"
            android:lines="1"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@={loginModel.employeeId}"
            app:error="@{loginModel.errorNumber}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_enter_employee_id" />

        <Button
            android:id="@+id/continue_sign_up"
            style="@style/TealButtonRoundCorner"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/space_30dp"
            android:onClick="@{() -> loginModel.clickContinue()}"
            android:text="@string/text_continue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_employee_id" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>