<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".module.inventory_manager.fragment.pending.IMPendingPartBarcodeScannedFragment">

 <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     android:id="@+id/card_details"
     android:layout_margin="@dimen/space_10dp"

     app:layout_constraintEnd_toEndOf="parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/space_10dp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 style="@style/Teal.TextSize14"
                 android:text="@string/part_name"/>





             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginStart="@dimen/space_10dp"
                 android:id="@+id/tv_part_name"
                 android:gravity="end"
                 style="@style/JetBlack.TextSize14"
                 tools:text="@string/part_name"/>

         </LinearLayout>




         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_10dp">
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 style="@style/Teal.TextSize14"
                 android:text="@string/part_sku"/>





             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginStart="@dimen/space_10dp"
                 android:id="@+id/tv_part_sku"
                 android:gravity="end"
                 style="@style/JetBlack.TextSize14"
                 tools:text="@string/part_name"/>

         </LinearLayout>




         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_10dp">
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 style="@style/Teal.TextSize14"
                 android:text="@string/part_color"/>





             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_marginStart="@dimen/space_10dp"
                 android:id="@+id/tv_part_color"
                 android:gravity="end"
                 style="@style/JetBlack.TextSize14"
                 tools:text="@string/part_name"/>

         </LinearLayout>


     </LinearLayout>
 </androidx.cardview.widget.CardView>



    <FrameLayout

        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginTop="@dimen/space_50dp"


app:layout_constraintBottom_toTopOf="@+id/ok"
        android:layout_margin="@dimen/space_10dp"
        tools:context=".module.storageManager.ui.activity.StoreOutActivity"
        app:layout_constraintTop_toBottomOf="@+id/card_details" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
       app:layout_constraintBottom_toTopOf="@+id/et_enter_part_code"
        android:gravity="center"
        android:id="@+id/ok"

        android:layout_marginTop="@dimen/space_10dp"/>



    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_part_barcode"

        android:gravity="center"
        android:layout_margin="@dimen/space_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/et_enter_part_code"
        app:layout_constraintEnd_toStartOf="@+id/btnSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/space_10dp"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/TealButton.TextSize10"
        android:id="@+id/btnSubmit"
    android:layout_margin="@dimen/space_10dp"
        android:layout_marginTop="@dimen/space_10dp"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>