<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space_10dp"
    android:elevation="@dimen/cardview_default_elevation">
    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Medium.Teal.TextSize14"
                android:text="@string/part_name"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Medium.JetBlack.TextSize14"
                android:id="@+id/tv_part_name"
                android:layout_marginStart="@dimen/space_10dp"
                tools:text="dfuyfjdifflyudfukl"/>


        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Medium.Teal.TextSize14"
                android:text="@string/part_barcode"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Medium.JetBlack.TextSize14"
                android:id="@+id/tv_part_barcode"
                android:layout_marginStart="@dimen/space_10dp"
                tools:text="dfuyfjdifflyudfukl"/>


        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Medium.Teal.TextSize14"
                android:text="@string/part_sku"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Medium.JetBlack.TextSize14"
                android:id="@+id/tv_part_sku"
                android:layout_marginStart="@dimen/space_10dp"
                tools:text="dfuyfjdifflyudfukl"/>


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/receive"
            android:layout_margin="@dimen/space_20dp"
            android:layout_marginTop="@dimen/space_10dp"
            android:text="@string/receive"
            android:background="@drawable/bg_dotted_rect"/>


    </LinearLayout>
</androidx.cardview.widget.CardView>